Save and show the last used SQL query for every connection in the database import dialow.

BUG: 425337
FIXED-IN: 2.8